[package]
name = "async-buf-pool"
version = "0.1.0"
authors = ["Chris Nixon <chris.nixon@sigma.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
async-channel = "1.5"
thiserror = "1.0"

bytes = "0.5"
